# openchat

./: .gitignore  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  launch_server.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  publish.yml  tests.yml
benchmarks/crypto/: bench_encryption.py
benchmarks/nlp/: bench_summarizer.py
benchmarks/storage/: bench_database.py
docs/: ARCHITECTURE.md  CLEAN_INTERFACE_DELIVERY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  FINAL_SUMMARY.md  K8S_GUIDE.md  PROJECT_STRUCTURE.md  SERVER_CLIENT_ARCHITECTURE.md  STRUCTURE.md  VISUAL_GUIDE.md
examples/: 00_launcher.py  01_server_deployment.py  02_client_usage.py
k8s/: configmap.yaml  deployment.yaml  rbac.yaml  service.yaml
openchat/: __init__.py  app.py
openchat/client/: __init__.py  architecture.py  basic.py  secure.py
openchat/core/: __init__.py  config.py  utils.py
openchat/crypto/: __init__.py  encryption.py
openchat/nlp/: __init__.py  summarizer.py
openchat/server/: __init__.py  basic.py  interface.py  secure.py
openchat/storage/: __init__.py  database.py
scripts/: README.md  build_docker.sh  format_code.sh  install_dev.sh  lint.sh  run_tests.sh
src/: __init__.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_database.py  test_encryption.py  test_summarizer.py
webapp/: README.md  app.py  test_client.py
webapp/templates/: index.html
